gave item name/quantity container a fixed height and overflow-y auto

--- a/src/components/UnpackedItem/UnpackedItem.css
+++ b/src/components/UnpackedItem/UnpackedItem.css
@@ -73,3 +73,9 @@
 .item--icon-filler {
   height: 24px;
 }
+
+.item--description-flow {
+  height: 14px;
+  overflow-x: scroll;
+  overflow-y: auto;
+}
